--- a/Presentation.Web/Web.config
+++ b/Presentation.Web/Web.config
@@ -97,6 +97,7 @@
   </location>
   <location path="." inheritInChildApplications="false">
     <system.webServer>
+      <modules runAllManagedModulesForAllRequests="true"></modules>
       <!-- Removes "Resource interpreted as Font but transferred with MIME type application/x-font-woff"-nonsense from browser console -->
       <staticContent>
         <remove fileExtension=".woff" />
